--- a/src/app/vehiculo/vehiculo-lista/vehiculo-lista.component.html
+++ b/src/app/vehiculo/vehiculo-lista/vehiculo-lista.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h2>Mi evaluacion angular - David Armando Rodríguez Varón</h2>
+  <h2>Mi evaluación angular - David Armando Rodríguez Varón</h2>
   <img src="assets/portada.png" alt="Portada" class="img-fluid my-3" />
   <div class="col-6">
     <table class="table">
@@ -37,7 +37,7 @@
     </div>
     <div class="my-3">
       <span id="footer" class="d-block text-center"
-        >Evaluacion angular - David Armando Rodríguez Varón</span
+        >Evaluación angular - David Armando Rodríguez Varón</span
       >
     </div>
   </div>
